--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,3 +15,13 @@ body {
 nav {
   @apply bg-jungle text-peach;
 }
+
+@layer components {
+  .btn {
+    @apply cursor-pointer transform hover:scale-110 transition-all duration-200 ease-out;
+  }
+
+  .btn-effect {
+    @apply transition duration-200 border-b-2 border-transparent hover:border-tumbleweed;
+  }
+}
